logs/Slang/chapter-8/8.25--parametrized_class_extend.sv.log
name: parametrized_class_extend
description: parametrized class extending another parametrized class
should_fail: 0
tags: 8.25
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25--parametrized_class_extend.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25--parametrized_class_extend.sv:8:2: error: language feature not yet supported
	class base_cls #(int b = 20);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25--parametrized_class_extend.sv:12:2: error: language feature not yet supported
	class ext_cls #(int e = 25) extends base_cls(5);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25--parametrized_class_extend.sv:16:2: error: language feature not yet supported
	ext_cls #(15) inst;
	^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25--parametrized_class_extend.sv:19:10: error: language feature not yet supported
		inst = new;
		       ^~~
